# musicApp

./: .env  Cargo.toml  LICENSE  README.md
migrations/2023-01-01-212916_music_appv1/: down.sql  up.sql
src/: main.rs  schema.rs
src/model/: artist.rs  song.rs
src/utils/: artist_interface.rs  song_interface.rs  util.rs
