[package]
name = "music_appv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "4.2.0"
env_logger = "0.10.0"
serde =  { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.89"